WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76116
IndexedDB: IDBIndex.get/getKey should yield undefined, not an error
https://bugs.webkit.org/show_bug.cgi?id=76116
Summary
IndexedDB: IDBIndex.get/getKey should yield undefined, not an error
Joshua Bell
Reported
2012-01-11 16:23:05 PST
The spec says: "This function produces the same result if a record with the given key doesn't exist as when a record exists, but has undefined as value. If you need to tell the two situations apart, you can use openCursor with the same key." And more specifically, the algorithms detail: 5.3 Index Referenced Value Retrieval Operation - "If no record was found, the result of this algorithm is undefined." 5.4 Index Value Retrieval Operation - "If no record was found, the result of this algorithm is undefined." We do this correctly for IDBObjectStore.get(), but not for IDBIndex.get() and IDBIndex.getKey()
Attachments
Patch
(11.02 KB, patch)
2012-01-13 17:09 PST
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-01-11 16:59:25 PST
I have most of a patch for this one, but it turns out that slinging an "undefined key" from the back end to the front end may require some plumbing changes in the Chromium port.
Joshua Bell
Comment 2
2012-01-13 17:09:40 PST
Created
attachment 122519
[details]
Patch
Joshua Bell
Comment 3
2012-01-13 17:10:26 PST
Comment on
attachment 122519
[details]
Patch Fortunately, this can be done w/o binding changes or WebKit API changes. 76075 does not appear to be so lucky.
WebKit Review Bot
Comment 4
2012-01-17 02:52:12 PST
Comment on
attachment 122519
[details]
Patch Clearing flags on attachment: 122519 Committed
r105137
: <
http://trac.webkit.org/changeset/105137
>
WebKit Review Bot
Comment 5
2012-01-17 02:52:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug