IndexedDB: IDBIndex.get/getKey should yield undefined, not an error https://bugs.webkit.org/show_bug.cgi?id=76116

Source/WebCore:

Pass an undefined value (for IDBIndex.get()) or a null key
(for IDBIndex.getKey()) back as the result, rather than raising
an exception.

Reviewed by Adam Barth.

Tests: storage/indexeddb/index-basics.html
       storage/indexeddb/cursor-index-delete.html
       storage/indexeddb/duplicates.html

* storage/IDBIndexBackendImpl.cpp:
(WebCore::IDBIndexBackendImpl::getInternal):
* storage/IDBRequest.cpp:
(WebCore::IDBRequest::onSuccess):

LayoutTests:

Reviewed by Adam Barth.

* storage/indexeddb/cursor-index-delete-expected.txt:
* storage/indexeddb/cursor-index-delete.html:
* storage/indexeddb/duplicates-expected.txt:
* storage/indexeddb/duplicates.html:
* storage/indexeddb/index-basics-expected.txt:
* storage/indexeddb/index-basics.html:


Canonical link: https://commits.webkit.org/93250@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105137 268f45cc-cd09-0410-ab3c-d52691b4dbfc